# mandos_ish

./: .gitignore  Cargo.toml
mandos/: common.steps.json  test-failing.scen.json  test-passing.scen.json
meta/: Cargo.toml
meta/src/: main.rs
output/: mandos_ish.abi.json  mandos_ish.imports.json  mandos_ish.wasm  mandos_ish.wat
src/: mandos_ish.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
